<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nerko_one"
            android:text="OwningaPet"
            android:textColor="@color/yaziRenk1"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="118dp"
            tools:layout_editor_absoluteY="7dp" />
        "
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="281dp"
        android:layout_height="252dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/maltese_dog" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/koyuAnaRenk"
        android:text="Puding"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cins_name"
        android:textColor="@color/yaziRenk2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/koyuAnaRenk"
        android:text="@string/age"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/koyuAnaRenk"
        android:text="@string/health"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/koyuAnaRenk"
        android:text="@string/sex"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/health_bilgi"
        android:textColor="@color/yaziRenk2"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/age_bilgi"
        android:textColor="@color/yaziRenk2"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/sex_bilgi"
        android:textColor="@color/yaziRenk2"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/koyuAnaRenk"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:text="Mersin,Erdemli"
        android:textColor="@color/yaziRenk2"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="301dp"
        android:layout_height="22dp"
        android:layout_marginTop="28dp"
        android:background="@color/koyuAnaRenk"
        android:text="@string/seller"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/chip2"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintVertical_bias="0.137" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:fontFamily="serif"
        android:text="@string/seller_bilgi"
        android:textColor="@color/yaziRenk1"
        android:textColorHint="@color/yaziRenk2"
        android:textSize="19sp"
        android:textStyle="bold"
        app:chipBackgroundColor="@color/anaRenk"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:rippleColor="@color/anaRenk" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/anaRenk"
        android:shadowColor="@color/koyuAnaRenk"
        android:text="@string/make_offer"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/chip2"
        app:layout_constraintTop_toBottomOf="@+id/chip2" />

</androidx.constraintlayout.widget.ConstraintLayout>